<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.UserDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_24" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user_avt"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginTop="40dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/sansserifCondensedMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_name"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_user_avt" />


        <TextView
            android:id="@+id/tv_login"
            style="@style/sansserifCondensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />


        <TextView
            android:id="@+id/tv_followers"
            style="@style/sansserifCondensedMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/followers"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_login"
            app:layout_constraintHorizontal_bias="0.345"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <TextView
            android:id="@+id/tv_following"
            style="@style/sansserifCondensedMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:text="@string/following"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.678"
            app:layout_constraintStart_toStartOf="@+id/tv_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_cv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_following"
            app:tabBackground="@drawable/tab_selected_bg"
            app:tabIndicatorColor="@color/transparent"
            app:tabMode="fixed"
            app:tabPaddingEnd="50dp"
            app:tabPaddingStart="50dp"
            app:tabTextColor="@color/colorVariant" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_follow"
            android:layout_width="0dp"
            android:layout_height="600dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_follow" />

        <ProgressBar
            android:id="@+id/loadingBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tl_follow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <ToggleButton
            android:id="@+id/toggle_fav"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/like_btn"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="ToggleButton"
            android:textOff=" "
            android:textOn=" "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/btn_share"
            app:layout_constraintEnd_toStartOf="@+id/toggle_fav"
            app:layout_constraintHorizontal_bias="0.89"
            app:layout_constraintStart_toEndOf="@+id/btn_prev"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/share_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
